[workspace]
members = [
    "crates/shared",
    "crates/scheduler",
    "crates/gateway",
    "crates/db",
]
resolver = "2"

[workspace.dependencies]
tokio              = { version = "1", features = ["full"] }
sqlx               = { version = "0.7", features = ["postgres", "runtime-tokio", "chrono", "uuid"] }
reqwest            = { version = "0.12", features = ["json", "rustls-tls"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow             = "1"
thiserror          = "2"
chrono             = { version = "0.4", features = ["serde"] }
uuid               = { version = "1", features = ["v4", "serde"] }
dotenvy            = "0.15"
twilight-gateway      = "0.15"
twilight-http         = "0.15"
twilight-model        = "0.15"
twilight-interactions = "0.15"
twilight-util         = { version = "0.15", features = ["builder"] }
async-trait = "0.1"
moka        = { version = "0.12", features = ["future"] }
redis       = { version = "0.25", features = ["tokio-comp", "json"] }
axum        = "0.8"
