[workspace]
members = [
    "crates/shared",
    "crates/scheduler",
    "crates/gateway",
    "crates/db",
]
resolver = "2"
[workspace.package]
edition = "2024"

[workspace.dependencies]
tokio              = { version = "1", features = ["full"] }
sqlx               = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls-aws-lc-rs", "chrono", "uuid", "macros", "migrate"] }
reqwest            = { version = "0.13", features = ["json", "rustls"] }
reqwest-middleware = { version = "0.5.1", features = ["json"] }
reqwest-retry      = "0.9"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
http               = "1"
dashmap            = "6.1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow             = "1"
thiserror          = "1"
chrono             = { version = "0.4", features = ["serde"] }
uuid               = { version = "1", features = ["v4", "serde"] }
dotenvy            = "0.15"
twilight-gateway      = "0.17"
twilight-http         = "0.17"
twilight-model        = "0.17"
twilight-interactions = "0.17"
twilight-util         = { version = "0.17", features = ["builder"] }
async-trait = "0.1"
moka        = { version = "0.12", features = ["future"] }
redis       = { version = "1.2", features = ["tokio-comp", "json"] }
axum        = "0.8"
rustls      = { version = "0.23", features = ["aws-lc-rs"] }
