[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]
ctftime_core = { package = "core", path = "../core" }
scraper = { path = "../scraper" }
db = { path = "../db" }
discord = { path = "../discord" }
reqwest = { workspace = true }
sqlx = { workspace = true, features = ["macros", "migrate"] }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }