[package]
name    = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
sqlx   = { workspace = true, default-features = false, features = ["postgres", "tls-rustls-aws-lc-rs", "uuid", "chrono", "json"] }
redis  = { workspace = true }
chrono = { workspace = true }
uuid   = { workspace = true }
serde  = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
metrics = "0.24.6"

[dev-dependencies]
tokio = { workspace = true }
dotenvy = { workspace = true }
